--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Tutorialzine",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.14.0",
     "jquery": "^3.1.0",
     "moment": "^2.10.2",
     "react": "^0.13.2",
